--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.png">
 
-    <!--Animation CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
 </head>
 
 <body>
@@ -74,13 +71,13 @@
     </nav>
     <!--End Navbar-->
 
-    <main class=" pt-5 bg-gradient-blue-green ">
+    <main class="pt-5 bg-gradient-blue-green">
 
-        <div class="container">
+        <div class="container-fluid">
 
             <section class="row text-white align-items-lg-center min-vh-100">
                 
-                <article class="col-12 col-lg-5 fs-5 animate__animated animate__fadeInLeftBig">
+                <article class="col-12 col-lg-5 fs-5 ">
                     <h2>¿Necesitas un increible sitio web?</h2>
                     <p>
                         Un sitio hermoso, moderno, responsivo y personalizado para
@@ -88,16 +85,16 @@
                     </p>
                     <a class="btn btn-success btn-lg fw-bold" href="#servicios">Si, ¡Empezemos!</a>
                 </article>
-                <article class="col-12 col-lg-7 animate__animated animate__fadeInLeftBig">
+                <article class="col-12 col-lg-7 ">
                     <img class="img-fluid" src="img/header-image.png" alt="¿Necesitas un increible sitio web?">
                 </article>
-                <article class="col-12 col-lg-5 fs-5  order-lg-1 animate__animated animate__fadeInRightBig">
+                <article class="col-12 col-lg-5 fs-5  order-lg-1 ">
                     <h2>Sitios web responsivos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, fugit corrupti minima officia
                         hic unde porro sed vel dolores beatae facilis optio dicta? Officiis itaque cumque deleniti nam,
                         commodi possimus.</p>
                 </article>
-                <article class="col-12 col-lg-7 animate__animated animate__fadeInRightBig">
+                <article class="col-12 col-lg-7 ">
                     <img class="img-fluid" src="img/header-image-2.png" alt="Sitios web responsivos">
 
                 </article>
