--- a/comencemos2.html
+++ b/comencemos2.html
@@ -77,7 +77,6 @@
         <div class="container">
 
             <article class="col-12 text-center">
-
                 <h1>Comencemos un nuevo proyecto</h1>
 
                 <p class="fs-5">
@@ -92,108 +91,20 @@
                 <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nostrum ea
                     consectetur minima labore, fugit doloremque dolor, sit reprehenderit nisi eum vel aspernatur
                     saepe aliquid autem amet, debitis temporibus nesciunt?</p>
-
             </article>
 
-            <section class="row text-center ">
-
-                <!--Paso 1-->
-                <section class="row align-items-lg-center mt-5">
-                    <article class="col-12 col-lg-6">
-                        <h2>Paso 1</h2>
-                        <h3>Concepto y Presupuesto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
-                            fugiat aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
-                            Officia in inventore non molestiae recusandae?</p>
-                    </article>
-
-                    <article class="col-12 col-lg-6 ">
-                        <img class='img-fluid' src="img/workflow-step-1.png" alt="Paso 1">
-                    </article>
-                </section>
-
-                <!--Paso 2-->
-                <section class="row align-items-lg-center my-3">
-                    <article class="col-12 col-lg-6 order-lg-1">
-                        <h2>Paso 2</h2>
-                        <h3>Concepto y Presupuesto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
-                            fugiat
-                            aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
-                            Officia in
-                            inventore non molestiae recusandae?</p>
-                    </article>
-
-                    <article class="col-12 col-lg-6 ">
-                        <img class='img-fluid' src="img/workflow-step-2.png" alt="Paso 2">
-                    </article>
-                </section>
-
-                <!--Paso 3-->
-                <section class="row align-items-lg-center my-3">
-
-
-                    <article class="col-12 col-lg-6">
-                        <h2>Paso 3</h2>
-                        <h3>Concepto y Presupuesto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
-                            fugiat
-                            aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
-                            Officia in
-                            inventore non molestiae recusandae?</p>
-                    </article>
-
-                    <article class="col-12 col-lg-6">
-                        <img class='img-fluid' src="img/workflow-step-3.png" alt="Paso 3">
-                    </article>
-
-                </section>
-
-                <!--Paso 4-->
-                <section class="row align-items-lg-center my-3">
-                    <article class="col-12 col-lg-6 order-lg-1">
-                        <h2>Paso 4</h2>
-                        <h3>Concepto y Presupuesto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
-                            fugiat
-                            aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
-                            Officia in
-                            inventore non molestiae recusandae?</p>
-                    </article>
-
-                    <article class="col-12 col-lg-6">
-                        <img class='img-fluid' src="img/workflow-step-4.png" alt="Paso 4">
-                    </article>
-                </section>
-
-                <!--Paso 5-->
-                <section class="row align-items-lg-center my-3">
-                    <article class="col-12 col-lg-6">
-                        <h2>Paso 5</h2>
-                        <h3>Concepto y Presupuesto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
-                            fugiat
-                            aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
-                            Officia in
-                            inventore non molestiae recusandae?</p>
-                    </article>
-
-                    <article class="col-12 col-lg-6 ">
-                        <img class='img-fluid' src="img/workflow-step-5.png" alt="Paso 5">
-                    </article>
-                </section>
-
-
-                <!--Pie-->
-                <article>
-                    <p class="text-center">
-                        <small> <sup class="text-first-color fw-bold">*</sup> Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestiae officia facilis culpa. Corrupti magnam voluptatibus, expedita
-                            error ullam voluptas consequuntur nemo magni. Laborum laudantium illo iusto architecto,
-                            debitis autem nulla!</small>
-                    </p>
+            <section class="rowa lign-items-lg-center min-vh-100">
+                <article class="col-12 col-lg-6">
+                    <h2>Paso 1</h2>
+                    <h3>Concepto y Presupuesto</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum facilis explicabo
+                        fugiat aspernatur quibusdam deserunt dolorum, id, eligendi, ad iste maiores consequatur quo.
+                        Officia in inventore non molestiae recusandae?</p>
                 </article>
 
+                <article class="col-12 col-lg-6">
+                    <img class="img-fluid" src="img/workflow-step-1.png" alt="Paso 1">
+                </article>
             </section>
 
         </div>
