--- a/comencemos.html
+++ b/comencemos.html
@@ -89,9 +89,8 @@
                     <p class="fs-5">En vez de: <i><b>"Trabajo para ti".</b></i></p>
                 </div>
 
-                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nostrum ea
-                    consectetur minima labore, fugit doloremque dolor, sit reprehenderit nisi eum vel aspernatur
-                    saepe aliquid autem amet, debitis temporibus nesciunt?</p>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nostrum ea
+                    consectetur minima labore</p>
 
             </article>
 
