--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Studio BAD DOG</title>
+    <title> ¿Interesado? | Studio BAD DOG</title>
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -63,7 +63,8 @@
                         <a class="nav-link" href="comencemos.html">Comencemos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" class="nav-link" href="contacto.html">¿Interesado?</a>
+                        <a class="nav-link active" aria-current="page" class="nav-link"
+                            href="contacto.html">¿Interesado?</a>
                     </li>
                 </ul>
             </div>
@@ -71,9 +72,109 @@
     </nav>
     <!--End Navbar-->
 
-    <main class="container pt-5 ">
-        <h1>Seccion Contacto</h1>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <main class="pt-5 bg-color">
+
+        <div class="container mb-5">
+
+            <div class="row">
+
+                <article class="col-12 text-center">
+
+                    <h1>¿Interesado?</h1>
+
+                    <p class="fs-5 mt-5">¡Enviame tus comentarios!</p>
+                    <p class="fs-5 my-3">Para mas información, puedes contactarme en: <a
+                            href="mailto:rijmjada@gmail.com">rijmjada@gmail.com</a></p>
+
+                </article>
+
+                <article class="col-12 col-lg-6 order-lg-1  mb-md-5 mb-sm-5">
+
+                    <form action="" class="container">
+
+                        <div class="mb-3">
+                            <label class="form-label" for="name">Nombre:</label>
+                            <input class="form-control" type="text" id="name" name="name"
+                                placeholder="Ingrese su nonmbre..">
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label" for="email">Email:</label>
+                            <input class="form-control" type="email" id="email" name="email"
+                                placeholder="Ingrese su email..">
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label class="form-label" for="comments">Comentarios:</label>
+                            <textarea class="form-control" name="comments" id="comments" name="comments"
+                                placeholder="Ingresa tu comentario.."></textarea>
+                        </div>
+                     
+
+                        <input class="btn btn-lg btn-success" type="button" value="Enviar">
+
+                    </form>
+
+
+                </article>
+
+                <article class="col-12 col-lg-6">
+
+                    <div class="ratio ratio-16x9">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.280726448256!2d-58.37283388512034!3d-34.6476126673282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334acc6b440fb%3A0xcde7da988c108bf3!2sGaspar%20Melchor%20de%20Jovellanos%201685%2C%20C1269ACO%20CABA!5e0!3m2!1ses-419!2sar!4v1678632772121!5m2!1ses-419!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+
+                </article>
+
+            </div>
+
+        </div>
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+            <div class="carousel-inner ">
+
+                <div class="carousel-caption bg-second-alpha-color d-none d-sm-block fs-6  m-0" style="z-index: 1;">
+                    Diego Ormeño - Full-Stack Developer
+                </div>
+
+
+                <div class="carousel-item active">
+                    <img src="img/about-1.jpg" class="d-block w-100" alt="about-1">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/about-2.jpg" class="d-block w-100" alt="about-2">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/about-3.jpg" class="d-block w-100" alt="about-3">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/about-4.jpg" class="d-block w-100" alt="about-4">
+                </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" style="background-color: yellow;" aria-hidden="true"></span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" style="background-color: yellow;" aria-hidden="true"></span>
+            </button>
+
+        </div>
+
+
+
     </main>
 
     <!--Footer-->
@@ -87,7 +188,8 @@
                 <a href="https://youtube.com" target="_blank"><i class="bi bi-youtube fs-3"></i></a>
                 <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram fs-3"></i></a>
                 <a href="https://messenger.com" target="_blank"><i class="bi bi-messenger fs-3"></i></a>
-                <a href="https://api.whatsapp.com/send?phone=541163597449" target="_blank"><i class="bi bi-whatsapp fs-3"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=541163597449" target="_blank"><i
+                        class="bi bi-whatsapp fs-3"></i></a>
             </nav>
             <small class="text-white ">&copy;2023 - Diego Ormeño, hecho con fines educativos.</small>
         </div>
